syntax = "proto3";

service TestApplication {
    rpc DoUnaryUnary(Message) returns (Message) {}
    rpc DoUnaryStream(Message) returns (stream Message) {}
    rpc DoStreamUnary(stream Message) returns (Message) {}
    rpc DoStreamStream(stream Message) returns (stream Message) {}

    rpc DoUnaryUnaryError(Message) returns (Message) {}
    rpc DoUnaryStreamError(Message) returns (stream Message) {}
}

message Message {
    string text = 1;
}
